Fixed wrong url to unit tests

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <h1> "Diacritical" Live Demonstration </h1>
 <p> <i>Dictionary-Based Term Correction </i>
 
-<p> This is a live demonstration (running in the browser in JavaScript) of tokenizing and then correcting a block of text using a dictionary of Bahá'í terms. It demonstrates correctly handling complex situations such as all-caps, possesives, quote-surrounded terms, embedded HTML tags, m-dashes and other complex punctuation. It also demonstrates the ability to identify possible new terms that are not in the dictionary. This tokenizer uses a single pass for optimal speed. A basic unit-test harness has also been started: <a href="tests/SpecRunner.html" target="_blank">Show Unit Tests</a>
+<p> This is a live demonstration (running in the browser in JavaScript) of tokenizing and then correcting a block of text using a dictionary of Bahá'í terms. It demonstrates correctly handling complex situations such as all-caps, possesives, quote-surrounded terms, embedded HTML tags, m-dashes and other complex punctuation. It also demonstrates the ability to identify possible new terms that are not in the dictionary. This tokenizer uses a single pass for optimal speed. A basic unit-test harness has also been started: <a href="tests/" target="_blank">Show Unit Tests</a>
 
   <br><br>
 
