--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@ Abdu'l-<u>Kh</u>álíq-i-Yazdi. Lorem ipsum '‘Abbás' sit
 "Siyyidu’sh-Shuhadá‘" tempor incididunt ut Dhi'l-Qa'dih
 et dolore magna <u>Sh</u>íráz.
 
-<br><br>
+<br>
 
 This is some sample text with bad diacritcals: Ahmad, Baghdad,
 Fath-Ali and Baqi. Notice that the dictionary uses _sh to indicate an
 underscore. Also, notice that the dictionary is case sensitive but the
-replacement system is still smart enough to deal with all-caps like AHMAD.
+replacement system is still smart enough to deal with all caps like AHMAD.
 Also, the dictionary ideally should have multiple versions of each word in
 order to help weed out misspellings. (Notice one of the spellings of Ahmad is
-wrong in the dictionary but the word is still corrected correctly.
+wrong in the dictionary but the word is still corrected correctly.)
 </p>
 
 
