--- a/index.html
+++ b/index.html
@@ -33,7 +33,20 @@
 
 
 
-<p id='12' class="accents-replace"> <span>MUHIT-I-SHÁ'IR-I-KIRMANI:</span> Lorem ipsum dolor sit Abul-Fadl,
+<p id='12' class="accents-replace">
+
+
+This is some sample text with bad diacritcals: Ahmad, Baghdad,
+Fath-Ali and Baqi. Notice that the dictionary uses _sh to indicate an
+underscore. Also, notice that the dictionary is case sensitive but the
+replacement system is still smart enough to deal with all caps like AHMAD.
+Also, the dictionary ideally should have multiple versions of each word in
+order to help weed out misspellings. (Notice one of the spellings of Ahmad is
+wrong in the dictionary but the word is still corrected correctly.)
+
+<br><br>
+
+  <span>MUHIT-I-SHÁ'IR-I-KIRMANI:</span> Lorem ipsum dolor sit Abul-Fadl,
 Abu'l-Fadl et "Abu'l-Fadl" elit, sed do Ahsanu’l-Qisas
 tempor incididunt ut Baghdad et dolore magna Baqi. Ut
 Baqir-i-Ra<u>sh</u>tí ad minim Fath-'Ali, quis
@@ -49,15 +62,6 @@ Abdu'l-<u>Kh</u>álíq-i-Yazdi. Lorem ipsum '‘Abbás' sit
 "Siyyidu’sh-Shuhadá‘" tempor incididunt ut Dhi'l-Qa'dih
 et dolore magna <u>Sh</u>íráz.
 
-<br>
-
-This is some sample text with bad diacritcals: Ahmad, Baghdad,
-Fath-Ali and Baqi. Notice that the dictionary uses _sh to indicate an
-underscore. Also, notice that the dictionary is case sensitive but the
-replacement system is still smart enough to deal with all caps like AHMAD.
-Also, the dictionary ideally should have multiple versions of each word in
-order to help weed out misspellings. (Notice one of the spellings of Ahmad is
-wrong in the dictionary but the word is still corrected correctly.)
 </p>
 
 
