--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <p id='12' class="accents-replace">
 
 
-This is some sample text with bad diacritcals: Ahmad, Baghdad,
+This is some sample text with bad diacritics: Ahmad, Baghdad,
 Fath-Ali and Baqi. Notice that the dictionary uses _sh to indicate an
 underscore. Also, notice that the dictionary is case sensitive but the
 replacement system is still smart enough to deal with all caps like AHMAD.
