updated documentation page

--- a/html/index.html
+++ b/html/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset='utf-8'>
@@ -9,17 +9,40 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
 
+
+
+
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Diacritical by chadananda</title>
+    <title>Diacriṭícál by chadananda</title>
+    <style>
+      h2 {margin-top:1em;}
+      #example_button {padding: 1em !important; font-size: 22pt; font-family: arial; height: 2em;}
+
+      mark.term {background: none; border: 1px solid silver; border-radius:3px;}
+      mark.term.correction {text-shadow: 0px 0px .3em rgba(255,230,0,.5); }
+      mark.term.misspelled {text-decoration: line-through; border: 0;}
+      mark.term.unknown  {text-shadow: 0px 0px .3em rgba(100,149,237,.8);}
+      div.legend {font-size: 9.5pt; margin: .5em; padding:.5em; float:right; line-height: 1.5em; border: 1px dashed gray;}
+
+      .accents-report {width: 80%; border: 1px dashed silver;
+        line-height: 1em; font-size: 14pt; margin: 1em; padding: .75em;
+      }
+      .accents-report h4 {margin: 5px; padding: 0; }
+      .accents-modified {border: 2px solid gray; margin: 1em; padding: 1em;}
+      div.corrected_text {border: 1px dashed silver; margin: 1em; padding: 1em; padding-left:3em;
+        background-color: rgba(255,255,255,0.6);}
+
+
+    </style>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Diacritical</h1>
+        <h1>Diacriṭícál</h1>
         <h2>Transliteration-Dictionary Based Suggestion Library - Javascript</h2>
         <a href="https://github.com/chadananda/diacritical" class="button"><small>View project on</small>GitHub</a>
       </div>
@@ -28,43 +51,44 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h1>
-<a name="diacritical" class="anchor" href="#diacritical"><span class="octicon octicon-link"></span></a>Diacritical</h1>
 
-<p><em>A Transliteration-Dictionary Based Suggestion Library</em></p>
 
-<h3>
-<a name="example-httpchadanandagithubiodiacritical" class="anchor" href="#example-httpchadanandagithubiodiacritical"><span class="octicon octicon-link"></span></a>Example: <a href="http://chadananda.github.io/diacritical">http://chadananda.github.io/diacritical</a>
-</h3>
-
-<h3>
-<a name="test-harness-httpchadanandagithubiodiacriticaltests" class="anchor" href="#test-harness-httpchadanandagithubiodiacriticaltests"><span class="octicon octicon-link"></span></a>Test harness: <a href="http://chadananda.github.io/diacritical/tests">http://chadananda.github.io/diacritical/tests</a>
-</h3>
-
-<h3>
-<a name="the-big-idea" class="anchor" href="#the-big-idea"><span class="octicon octicon-link"></span></a>The big idea:</h3>
+<!-- ==================================== -->
+<h2>The big idea:</h2>
 
 <p>Formatting Bahá’í electronic texts is a pain. Even the best quality electronic texts from the BWC contain thousands of errors. And by far the most common type of error is the darned diacritcals on all those transliterated Arabic and Persian terms.</p>
 
 <p>This project attempts to address that fundamental problem by providing an automated replacement and suggestion system which can utilize a dictionary of authoritatively spelled terms.  </p>
 
-<p>The project to actually gather that massive correct dictionary is over here:</p>
+<p>The project to actually gather that massive correct dictionary is over here:  <a href="https://github.com/chadananda/accents">https://github.com/chadananda/accents</a></p>
 
-<h4>
-<a name="httpsgithubcomchadanandaaccents" class="anchor" href="#httpsgithubcomchadanandaaccents"><span class="octicon octicon-link"></span></a><a href="https://github.com/chadananda/accents">https://github.com/chadananda/accents</a>
-</h4>
 
-<h3>
-<a name="get-involved-help-build-the-dictionary" class="anchor" href="#get-involved-help-build-the-dictionary"><span class="octicon octicon-link"></span></a>Get involved, help build the dictionary!</h3>
 
-<p>To get involved, simply contact me at <a href="mailto:chadananda@gmail.com">chadananda@gmail.com</a>. I'll set up user credentials for you which allow you to log in and start adding words to the dictionary. </p>
 
-<p>A JSON object containing the current wordlist can be pulled down using this REST URL:</p>
+<!-- ==================================== -->
+<h2>Test Harness: </h2>
+<p> About 20 tests written in Jasmine to test all kinds of weird text-parsing scenarios:
+<a href="http://chadananda.github.io/diacritical/tests">http://chadananda.github.io/diacritical/tests</a></p>
 
-<ul>
-<li><a href="http://diacritics.iriscouch.com/accents/_design/terms_list/_view/terms_list?group=true&amp;group_level=1">http://diacritics.iriscouch.com/accents/_design/terms_list/_view/terms_list?group=true&amp;group_level=1</a></li>
-</ul><h3>
-<a name="using-the-library" class="anchor" href="#using-the-library"><span class="octicon octicon-link"></span></a>Using the Library</h3>
+
+<!-- ==================================== -->
+<h2>Generate a Suggestion Report for your own Text: </h2>
+
+<p> An implementation of the script which pulls down the current wordlist. You can run entire books through this little example.
+<a href="http://chadananda.github.io/diacritical/html/conversion.html">http://chadananda.github.io/diacritical/html/conversion.html</a>
+
+
+<!-- ==================================== -->
+<h2>Get Involved, help me Build the Dictionary!</h2>
+
+<p>To get involved, simply contact me at <a href="mailto:chadananda@gmail.com">chadananda@gmail.com</a>. I'll set up user credentials for for the "accents" app, assign you a book and answer any questions.   </p>
+
+<p>Want to use the latest dictionary? This REST URL pulls down a JSON object containing the entire current wordlist, grouped by occurance with count.  <a href="http://diacritics.iriscouch.com/accents/_design/terms_list/_view/terms_list?group=true&amp;group_level=1">http://diacritics.iriscouch.com/accents/_design/terms_list/_view/terms_list?group=true&amp;group_level=1</a></p>
+
+
+
+<!-- ==================================== -->
+<h2>Using the Library in your own Project</h2>
 
 <p>After adding diacritical.js to a web page simply provide a dictionary of UTF-8 terms as a Javascript array. For example:</p>
 
@@ -86,7 +110,7 @@
 <span class="kd">var</span> <span class="nx">bad_text</span> <span class="o">=</span> <span class="s2">"This is some sample text with bad diacriticals: Ahmad, Baghdad, "</span><span class="o">+</span>
   <span class="s2">"Fath-Ali and Baqi. Notice that the dictionary uses _sh to indicate an "</span><span class="o">+</span>
   <span class="s2">"underscore. Also, notice that the dictionary is case sensitive but the "</span><span class="o">+</span>
-  <span class="s2">"replacement system is still smart enough to deal with all-caps like AHMAD. "</span><span class="o">+</span>
+  <span class="s2">"replacement system is still smart enough to deal with  ALLCAP words like AHMAD. "</span><span class="o">+</span>
   <span class="s2">"Moreover, the dictionary ideally should have multiple versions of each word in "</span><span class="o">+</span>
   <span class="s2">"order to help weed out misspellings. (Notice one of the spellings of Ahmad is "</span><span class="o">+</span>
   <span class="s2">"wrong in the dictionary but the word is still corrected correctly.)"</span><span class="p">;</span>
@@ -94,9 +118,18 @@
 <span class="kd">var</span> <span class="nx">fixed_text</span> <span class="o">=</span> <span class="nx">diacritical</span><span class="p">.</span><span class="nx">replaceText</span><span class="p">(</span><span class="nx">bad_text</span><span class="p">,</span> <span class="nx">dictionary</span><span class="p">);</span>
 </pre></div>
 
-<h4>
-<a name="see-it-in-action-here-httpchadanandagithubiodiacritical" class="anchor" href="#see-it-in-action-here-httpchadanandagithubiodiacritical"><span class="octicon octicon-link"></span></a>See it in action here: <a href="http://chadananda.github.io/diacritical">http://chadananda.github.io/diacritical</a>
-</h4>
+
+
+<h2>See it in action here: </h2>
+
+
+<div id="example_corrected">
+  <input id="example_button" type="button" style="" value="Click here to see the bad text above corrected." />
+  <br><br><br><br><br><br>
+</div>
+
+
+
         </section>
 
         <aside id="sidebar">
@@ -116,6 +149,105 @@
       </div>
     </div>
 
-  
+
   </body>
+
+
+  <script src="//code.jquery.com/jquery-2.1.0.min.js"></script>
+  <script src="../diacritical.js"></script>
+  <script type="text/javascript">
+    // ok, just a little test bed for HTML conversion
+    $(function(){ $('#example_button').click(function(){
+
+      var diacritical = new Diacritical();
+
+      var dictionary = [
+          'Abu’l-Faḍl',
+          'Aḥmad',
+          'Aḥmad',
+          'Aḥmad',
+          'Ahmad',
+          'aḥmad',
+          'Aḥsanu’l-Qiṣaṣ',
+          'Ba_ghdád',
+          'Baqí‘',
+          'Báqir-i-Ra_shtí',
+          'Dalílu’l-Mutaḥayyirín',
+          'Fatḥ-‘Alí',
+      ];
+      var bad_text = "This is some sample text with bad diacriticals: Ahmad, Baghdad, "+
+        "Fath-Ali and Baqi. Notice that the dictionary uses _sh to indicate an "+
+        "underscore. Also, notice that the dictionary is case sensitive but the "+
+        "replacement system is still smart enough to deal with ALLCAP words like AHMAD. "+
+        "Moreover, the dictionary ideally should have multiple versions of each word in "+
+        "order to help weed out misspellings. (Notice one of the spellings of Ahmad is "+
+        "wrong in the dictionary but the word is still corrected correctly.)";
+
+      // simple auto correct
+      var fixed_text = diacritical.replaceText(bad_text, dictionary);
+
+      // correct showing all errors and returning report object
+      var report = {}; // must pass in an object to get a report back
+      var fixed_text_showing_all = diacritical.replaceText(bad_text, dictionary, 'showall', report);
+
+
+      var html = "<div class='corrected_text'> "+
+        "<div> <h3>Showing Corrections:</h3> "+
+        "<div class='legend'> "+
+        "<mark class='term correct'>Correct Term</mark> <br>"+
+        "<mark class='term misspelled'>Misspelled</mark> <br>"+
+        "<mark class='term correction'>Suggestion</mark> <br>"+
+        "<mark class='term unknown'>Unknown Term</mark> </div>"+
+        "" + fixed_text_showing_all + "</div>" +
+        "<div> <h3>Automated Correction Mode:</h3> "+
+        "" + fixed_text + "</div>  "+
+        " <h3>JSON Report:</h3> <pre class='report'>" + JSON.stringify(report, undefined, 2) + "</pre> "+
+        "</div>";
+
+      $('#example_corrected').html(html);
+
+
+    }) });
+
+    /*
+    function accents_replacement(text, dictionary, type, options) {
+
+      var diacritical = new Diacritical(),
+          wordlist = dictionary,
+          result = {report: {}, type: 'text', text:'', html:''},
+          markedText, cleanText,
+          report = {},
+          tokens = [];
+
+      // prepare dictionary
+      dictionary = diacritical.prepareDictionary(dictionary); //console.log(dictionary);
+      // tokenize text
+      tokens = diacritical.tokenizeString(text, type);
+      // look up term suggestions
+      diacritical.addTermSuggestions(tokens, dictionary, report);
+
+      // re-create text block with marks
+      // options: [clean], showall, suggest, original
+      markedText = diacritical.rebuildBlock(tokens, 'showall');
+      cleanText = diacritical.rebuildBlock(tokens);
+
+      result.report = report;
+      result.html = "<div> <h3>Showing Corrections:</h3> "+
+        "<div class='legend'> "+
+        "<mark class='term correct'>Correct Term</mark> <br>"+
+        "<mark class='term misspelled'>Misspelled</mark> <br>"+
+        "<mark class='term correction'>Suggestion</mark> <br>"+
+        "<mark class='term unknown'>Unknown Term</mark> </div>"+
+        "" + markedText + "</div>" +
+        "<hr />" + "<div> <h3>Automated Correction Mode:</h3> "+
+        "" + cleanText + "</div> <hr> ";
+      //result.report.type = type;
+      result.reportText = JSON.stringify(result.report, undefined, 2);
+      result.reportHTML = "<pre>" + result.reportText + "</pre>";
+
+      return result;
+    }
+    */
+
+    </script>
 </html>
