Updated doc HTML

--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Diacriṭícál by chadananda</title>
+    <title>Diacritícál by Chad Jones</title>
     <style>
       h2 {margin-top:1em;}
       #example_button {padding: 1em !important; font-size: 22pt; font-family: arial; height: 2em;}
@@ -42,8 +42,8 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Diacriṭícál</h1>
-        <h2>Transliteration-Dictionary Based Suggestion Library - Javascript</h2>
+        <h1>Diacritícál</h1>
+        <h2>Transliteration-Dictionary Suggestions</h2>
         <a href="https://github.com/chadananda/diacritical" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
@@ -54,21 +54,17 @@
 
 
 <!-- ==================================== -->
-<h2>The big idea:</h2>
+<h2>The Big Idea:</h2>
 
 <p>Formatting Bahá’í electronic texts is a pain. Even the best quality electronic texts from the BWC contain thousands of errors. And by far the most common type of error is the darned diacritcals on all those transliterated Arabic and Persian terms.</p>
 
 <p>This project attempts to address that fundamental problem by providing an automated replacement and suggestion system which can utilize a dictionary of authoritatively spelled terms.  </p>
 
-<p>The project to actually gather that massive correct dictionary is over here:  <a href="https://github.com/chadananda/accents">https://github.com/chadananda/accents</a></p>
 
 
 
 
-<!-- ==================================== -->
-<h2>Test Harness: </h2>
-<p> About 20 tests written in Jasmine to test all kinds of weird text-parsing scenarios:
-<a href="http://chadananda.github.io/diacritical/tests">http://chadananda.github.io/diacritical/tests</a></p>
+
 
 
 <!-- ==================================== -->
@@ -80,6 +76,8 @@
 
 <!-- ==================================== -->
 <h2>Get Involved, help me Build the Dictionary!</h2>
+
+<p>The project to actually gather that massive correct dictionary is over here:  <a href="https://github.com/chadananda/accents">https://github.com/chadananda/accents</a></p>
 
 <p>To get involved, simply contact me at <a href="mailto:chadananda@gmail.com">chadananda@gmail.com</a>. I'll set up user credentials for for the "accents" app, assign you a book and answer any questions.   </p>
 
@@ -126,7 +124,12 @@
 <div id="example_corrected">
   <input id="example_button" type="button" style="" value="Click here to see the bad text above corrected." />
   <br><br><br><br><br><br>
-</div>
+</div><br><br>
+
+<!-- ==================================== -->
+<h2>Test Harness: </h2>
+<p> About 20 tests written in Jasmine to test all kinds of weird text-parsing scenarios:
+<a href="http://chadananda.github.io/diacritical/tests">http://chadananda.github.io/diacritical/tests</a></p>
 
 
 
