Updated README HTML

--- a/html/index.html
+++ b/html/index.html
@@ -43,7 +43,7 @@
     <header>
       <div class="inner">
         <h1>Diacritícál</h1>
-        <h2>Transliteration-Dictionary Suggestions</h2>
+        <h2>Transliteration-Dictionary Suggestion Script</h2>
         <a href="https://github.com/chadananda/diacritical" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
