got pasted HTML working

--- a/html/index.html
+++ b/html/index.html
@@ -43,7 +43,7 @@
     <header>
       <div class="inner">
         <h1>Diacritícál</h1>
-        <h2>Transliteration-Dictionary Suggestion Script</h2>
+        <h2>Bahá’í Term Suggestion Script</h2>
         <a href="https://github.com/chadananda/diacritical" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
@@ -71,7 +71,7 @@
 <h2>Generate a Suggestion Report for your own Text: </h2>
 
 <p> An implementation of the script which pulls down the current wordlist. You can run entire books through this little example.
-<a href="http://chadananda.github.io/diacritical/html/conversion.html">http://chadananda.github.io/diacritical/html/conversion.html</a>
+<a href="http://chadananda.github.io/diacritical/html/report.html">http://chadananda.github.io/diacritical/html/conversion.html</a>
 
 
 <!-- ==================================== -->
