--- a/html/report.html
+++ b/html/report.html
@@ -38,6 +38,16 @@
       #textinput {width: 98%; height: 20em; resize: none; font-size:10pt; font-family: "courier new";}
 
       #main-content {width:100% !important;}
+      .blink {
+        animation: blink 1s steps(5, start) infinite;
+        -webkit-animation: blink 1s steps(5, start) infinite;
+      }
+      @keyframes blink {
+        to { visibility: hidden; }
+      }
+      @-webkit-keyframes blink {
+        to { visibility: hidden; }
+      }
     </style>
   </head>
 
@@ -58,7 +68,9 @@
 
 <p> Paste in any text and generate a printable suggestion report showing possible corrections in your text.
 
-<p> <span id="dictionary_load"> Loading latest dictionary <img src="images/24px-spinner-0645ad.gif"></span>
+<div id="dictionary_load">
+ <span class="blink">Loading latest dictionary</span>
+ <img src="images/24px-spinner-0645ad.gif"></div>
 
 <!-- ==================================== -->
 <h2>Paste Your HTML Text Here</h2>
