updated Romanian example

--- a/html/report-nn-romanian.html
+++ b/html/report-nn-romanian.html
@@ -52,6 +52,10 @@
       <div class="inner clearfix">
         <section id="main-content">
 
+
+
+
+
 <div id="report_output"><div class="legend"> <mark class="term correct">Correct Term</mark> <br><mark class="term misspelled">Misspelled</mark> <br><mark class="term correction">Suggestion</mark> <br><mark class="term unknown">Unknown Term</mark> </div><p>
     CRAINICII AUROREI
 </p>
@@ -693,7 +697,7 @@ indigeni, trebuie să lupte şi zidul de fier al încăpăţânării, clădit de
 <p></p>4. 4. <mark class="term correct">‘Alí</mark>, fiul lui <mark class="term correct">Ḥusayn</mark> şi <mark class="term misspelled"><u>Sh</u>áhribánú</mark> <mark class="term correction"><u>Sh</u>ahribánú</mark> (fiica lui <mark class="term unknown">Yazdígird</mark>, ultimul rege <mark class="term unknown">sásáníyán</mark>), numit <mark class="term correct">Imám</mark> <mark class="term correct">Zaynu’l-‘Ábidín</mark>, otrăvit de <mark class="term correct">Valíd</mark>.
 <p></p>5. 5. <mark class="term correct">Muḥammad-Báqir</mark>, fiul lui <mark class="term correct">Zaynu’l-‘Ábidín</mark>, mai sus menţionat, şi vara sa <mark class="term correct">Umm-i-‘Abdu’lláh</mark>, fiica lui <mark class="term correct">Imám</mark> <mark class="term correct">Ḥasan</mark>, otrăvit de <mark class="term correct">Ibráhím</mark> <mark class="term correct">ibn-i-Valíd</mark>.
 <p></p>6. 6. <mark class="term correct">Ja‘far-i-Ṣádiq</mark>, fiul lui <mark class="term correct">Imám</mark> <mark class="term correct">Muḥammad-Báqir</mark>, otrăvit din ordinul lui <mark class="term correct">Manṣúr</mark>, <mark class="term unknown">‘Abbáside</mark> <mark class="term correct"><u>Kh</u>alífih</mark>.
-<p></p>7. 7. <mark class="term misspelled">Músá-Kaẓim</mark> <mark class="term correction">Musá-Káẓim</mark>, fiul <mark class="term unknown">Imám-ului</mark> <mark class="term correct">Ja‘far-i-Ṣádiq</mark>, născut în 129 A.H., otrăvit din ordinul lui <mark class="term correct">Hárúnu’r-Ra<u>sh</u>íd</mark> în 183 A.H.
+<p></p>7. 7. <mark class="term misspelled">Músá-Kaẓim</mark> <mark class="term correction">Músá-Káẓim</mark>, fiul <mark class="term unknown">Imám-ului</mark> <mark class="term correct">Ja‘far-i-Ṣádiq</mark>, născut în 129 A.H., otrăvit din ordinul lui <mark class="term correct">Hárúnu’r-Ra<u>sh</u>íd</mark> în 183 A.H.
 <p></p>8. 8. <mark class="term correct">‘Alí-ibn-i-Músá’r-Riḍá</mark>, cunoscut ca <mark class="term correct">Imám</mark> <mark class="term correct">Riḍá</mark>, născut în 153 A.H., otrăvit lângă <mark class="term correct">Ṭús</mark> în <mark class="term correct"><u>Kh</u>urásán</mark>, din ordinul lui <mark class="term correct"><u>Kh</u>alífih</mark> <mark class="term correct">Ma’mún</mark>, în
     203 A.H şi îngropat la <mark class="term correct">Ma<u>sh</u>had</mark>, de la care îi vine numele şi caracterul sfânt.
 <p></p>9. 9. <mark class="term correct">Muḥammad-Taqí</mark>, fiul lui <mark class="term correct">Imám</mark> <mark class="term correct">Riḍá</mark>, născut în 195 A.H., otrăvit de <mark class="term correct"><u>Kh</u>alífih</mark> <mark class="term correct">Mu‘taṣim</mark> la <mark class="term correct">Ba<u>gh</u>dád</mark>, în 220 A.H.
@@ -939,7 +943,7 @@ celebru pentru autoritatea şi cunoştinţele sale. Cu toate acestea, în anumit
     uimire pentru companionul său, care era prea conştient de propria sa superioritate şi poziţie. Totuşi, ulterior, când <mark class="term correct"><u>Sh</u>ay<u>kh</u></mark> <mark class="term correct">Aḥmad</mark> a plecat
     din oraşul <mark class="term correct">Yazd</mark>, <mark class="term correct">‘Abdu’l-Vahháb</mark> <mark class="term unknown">s-a</mark> retras din societatea bărbaţilor, ajungând să fie privit ca un <mark class="term correct">Ṣúfí</mark>. Însă, conducătorii ortodocşi ai acelei comunităţi,
     precum <mark class="term correct">Ni‘matu’lláhí</mark> şi <mark class="term correct"><u>Dh</u>ahabí</mark>, îl denunţară ca intrus, suspectându-l de dorinţa de a prelua conducerea. <mark class="term correct">‘Abdu’l-Vahháb</mark>, pentru care doctrina <mark class="term correct">Ṣúfí</mark>
-    nu prezenta o atracţie deosebită, a dispreţuit acuzaţiile lor false şi a întors spatele acelei societăţi. Păstrase legătura doar cu <mark class="term correct">Ḥájí</mark> <mark class="term misspelled">Ḥasan-i-Náyiní</mark> <mark class="term correction">Hasan-i-Náyiní</mark>, pe
+    nu prezenta o atracţie deosebită, a dispreţuit acuzaţiile lor false şi a întors spatele acelei societăţi. Păstrase legătura doar cu <mark class="term correct">Ḥájí</mark> <mark class="term correct">Ḥasan-i-Náyiní</mark>, pe
     care îl alesese ca prieten apropiat şi căruia îi destăinuise secretul ce îi fusese încredinţat de către maestrul său. După ce <mark class="term correct">‘Abdu’l-Vahháb</mark> a murit, acest
     prieten, urmându-i exemplul, a continuat să urmeze calea pe care fusese îndrumat, anunţându-le tuturor sufletelor receptive veştile despre apropiata
     Revelaţie a lui Dumnezeu.
@@ -959,7 +963,7 @@ dimineaţă, în zori, <mark class="term unknown">l-am</mark> găsit căzut cu f
     noii Revelaţii a sosit în <mark class="term correct">Ká<u>sh</u>án</mark> şi a fost pentru trei nopţi oaspete în casa lui <mark class="term correct">Ḥájí</mark> <mark class="term correct">Mírzá</mark> <mark class="term correct">Jání</mark>, pentru că nu ştiam de vizita Sa, am fost lipsit de
     onoarea de a mă afla în prezenţa Lui. La ceva vreme după aceea, pe când discutam cu adepţii Credinţei, am fost informat că data naşterii lui <mark class="term correct">Báb</mark> cădea în
     prima zi a lunii <mark class="term correct">Muḥarram</mark> a anului 1235 A.H.<a name="footnote-2341-16-backlink"></a><a href="#footnote-2341-16">16</a> <mark class="term unknown">Mi-am</mark> dat seama că data la care se
-    referise <mark class="term correct">Ḥájí</mark> <mark class="term misspelled">Ḥasan-i-Náyiní</mark> <mark class="term correction">Hasan-i-Náyiní</mark> nu corespundea cu aceasta, că era de fapt o diferenţă de doi ani între ele. Acest gând <mark class="term unknown">m-a</mark> tulburat dureros. Totuşi, mult după
+    referise <mark class="term correct">Ḥájí</mark> <mark class="term correct">Ḥasan-i-Náyiní</mark> nu corespundea cu aceasta, că era de fapt o diferenţă de doi ani între ele. Acest gând <mark class="term unknown">m-a</mark> tulburat dureros. Totuşi, mult după
     aceea, am întâlnit un anume <mark class="term correct">Ḥájí</mark> <mark class="term correct">Mírzá</mark> <mark class="term correct">Kamálu’d-Dín-i-Naráqí</mark>, care <mark class="term unknown">mi-a</mark> anunţat Revelaţia lui <mark class="term correct">Bahá’u’lláh</mark> în <mark class="term correct">Ba<u>gh</u>dád</mark> şi care <mark class="term unknown">mi-a</mark> împărtăşit o serie
     de versete din «<mark class="term correct">Qaṣídiy-i-Varqá’íyyih</mark>», precum şi anumite pasaje din «Cuvintele Tainice» în persană şi arabă. Am fost mişcat până în străfundurile
     sufletului meu <mark class="term unknown">auzindu-l</mark> recitând aceste cuvinte sacre. Îmi aduc aminte şi acum foarte bine următoarele: «O, Fiu al Fiinţei! Inima ta e locuinţa mea;
@@ -1409,7 +1413,7 @@ provine <mark class="term unknown">dintr-un</mark> neam pur, <mark class="term u
     de un număr de discipoli ai lui <mark class="term correct">Siyyid</mark> <mark class="term correct">Káẓim</mark>, am privit aluziile referitoare la deficienţele fizice, despre care <mark class="term unknown">Siyyid-ul</mark> afirmase că Cel promis nu le
     avea, ca fiind îndreptate în mod particular către trei dintre colegii noştri discipoli. Le dădusem chiar asemenea porecle care indicau defectele lor
 trupeşti. Unul dintre ei era <mark class="term correct">Ḥájí</mark> <mark class="term correct">Mírzá</mark> <mark class="term correct">Karím</mark> <mark class="term correct"><u>Kh</u>án</mark>,<a name="footnote-2341-56-backlink"></a><a href="#footnote-2341-56">56</a> fiul lui <mark class="term correct">Ibráhím</mark>    <mark class="term correct"><u>Kh</u>án-i-Qájár-i-Kirmání</mark>, care nu avea un ochi şi pe deasupra era cam spân. Un altul era <mark class="term correct">Mírzá</mark> <mark class="term correct">Ḥasan-i-Gawhar</mark>, un bărbat extrem de corpolent. Al
-    treilea era <mark class="term correct">Mírzá</mark> <mark class="term misspelled">Muḥíṭ-i-<u>Sh</u>á’ir-i-Kirmání</mark> <mark class="term correction">Muḥíṭ-i-Shá‘ir-i-Kirmání</mark>, care era deosebit de subţire şi înalt. Eram convinşi că aceştia nu erau alţii decât aceia la care
+    treilea era <mark class="term correct">Mírzá</mark> <mark class="term misspelled">Muḥíṭ-i-<u>Sh</u>á’ir-i-Kirmání</mark> <mark class="term correction">Muḥíṭ-i-<u>Sh</u>á‘ir-i-Kirmání</mark>, care era deosebit de subţire şi înalt. Eram convinşi că aceştia nu erau alţii decât aceia la care
     <mark class="term unknown">Siyyid-ul</mark> făcea tot timpul aluzie ca fiind oamenii înfumuraţi şi fără credinţă ce îşi vor da î<mark class="term unknown">ntr-o</mark> zi arama pe faţă şi îşi vor trăda ingratitudinea şi
     nesăbuinţa. Cât despre <mark class="term correct">Ḥájí</mark> <mark class="term correct">Mírzá</mark> <mark class="term correct">Karím</mark> <mark class="term correct"><u>Kh</u>án</mark>, care timp de doi ani a stat la picioarele lui <mark class="term correct">Siyyid</mark> <mark class="term correct">Káẓim</mark> şi a dobândit de la acesta toată aşa-zisa
     lui învăţătură, în final a obţinut permisiunea maestrului de a pleca pentru a se stabili în <mark class="term correct">Kirmán</mark>, unde <mark class="term unknown">s-a</mark> angajat în promovarea intereselor <mark class="term unknown">Islám-ului</mark>
@@ -13412,7 +13416,7 @@ guvernului, spune <mark class="term unknown">Fárs-Námih</mark>, şi ş<mark cl
     acoperă discret ignoranţa lor asupra identităţii sfântului, <mark class="term unknown">descriindu-l</mark> ca pe un «musulman sfânt, al cărui mormânt este foarte frecventat de persoanele
     pioase din <mark class="term correct">Ṭihrán</mark>. Totuşi, se pare că, cu mult înaintea apariţiei <mark class="term unknown">Islám-ului</mark>, acesta a fost un loc sacru, mormântul unei femei de o mare sanctitate, în
     legătură cu care se poate nota că mormântul este încă în mare parte patronat de femei. După cucerirea musulmană, aici a fost înmormântat <mark class="term correct">Imám-Zádih</mark> <mark class="term correct">Ḥamzih</mark>,
-    fiul celui <mark class="term unknown">de-al</mark> şaptelea <mark class="term misspelled">imam</mark> <mark class="term correction">imám</mark>, <mark class="term misspelled">Músá-Kázim</mark> <mark class="term correction">Musá-Káẓim</mark>; iar aici, fugind de <mark class="term correct"><u>Kh</u>alíf</mark> Mutavakkil, a ajuns o persoană sfântă numită <mark class="term correct">Abu’l-Qásim</mark> <mark class="term misspelled">Abdu’l-‘Aẓím</mark> <mark class="term correction">‘Abdu’l-‘Aẓím</mark>, care a
+    fiul celui <mark class="term unknown">de-al</mark> şaptelea <mark class="term misspelled">imam</mark> <mark class="term correction">imám</mark>, <mark class="term misspelled">Músá-Kázim</mark> <mark class="term correction">Músá-Káẓim</mark>; iar aici, fugind de <mark class="term correct"><u>Kh</u>alíf</mark> Mutavakkil, a ajuns o persoană sfântă numită <mark class="term correct">Abu’l-Qásim</mark> <mark class="term misspelled">Abdu’l-‘Aẓím</mark> <mark class="term correction">‘Abdu’l-‘Aẓím</mark>, care a
 trăit ascuns la Ravy până la moartea sa, aproximativ în anul 861 A.D. (Aceasta este relatarea oferită de persanul <mark class="term correct">Kitáb-i-Majlisí</mark>, citându-l pe <u>Sh</u>ay    <u>kh</u> <mark class="term correct">Najá<u>sh</u>í</mark>, citându-l pe <mark class="term correct">Barkí</mark>). După aceea, faima sa a <mark class="term unknown">eclipsat-o</mark> pe cea a predecesorului său ilustru. Suveranii care au urmat, în special
     cei ai dinastiei conducătoare, au extins şi înfrumuseţat grupul de clădiri construite deasupra mormântului său, a cărui popularitate mereu crescândă a
     determinat apariţia unui sat în jurul locului sfânt. Moscheea este situată la câmpie, la aproximativ şase mile sud, <mark class="term unknown">sud-est</mark> de capitală, chiar dincolo de
@@ -15808,7 +15812,7 @@ măgari, catâri şi cămile şi <mark class="term unknown">i-au</mark> dus prin
     "_Khudá-Ba_kh_sh-i-Qú_chání",
     "Nási_khu’t-Tavárí_kh",
     "_Shahribánú",
-    "Musá-Káẓim",
+    "Músá-Káẓim",
     "Ḥasan-i-‘Askarí",
     "Nargis-_Khátún",
     "ibn-i-Sa‘íd",
@@ -15819,7 +15823,6 @@ măgari, catâri şi cămile şi <mark class="term unknown">i-au</mark> dus prin
     "Aḥmad",
     "Abu’l-Qásim-i-Qá’im-Maqám",
     "_Dhabíḥ",
-    "Hasan-i-Náyiní",
     "Maḥmúd-i-Qamṣarí",
     "Ḥín",
     "Baqí‘",
@@ -15827,7 +15830,7 @@ măgari, catâri şi cămile şi <mark class="term unknown">i-au</mark> dus prin
     "Jabal-i-_Shadíd",
     "Siyyid",
     "_Dhi’l-Hijjih",
-    "Muḥíṭ-i-Shá‘ir-i-Kirmání",
+    "Muḥíṭ-i-_Shá‘ir-i-Kirmání",
     "mua_dh_dhin",
     "Bú_shihr",
     "Ṭá",
@@ -16106,8 +16109,12 @@ măgari, catâri şi cămile şi <mark class="term unknown">i-au</mark> dus prin
     "IMÁM"
   ],
   "unknownTotal": 6724,
-  "correctedTotal": 681
+  "correctedTotal": 679
 }</pre> </b></div>
+
+
+
+
 
 
 
