Updated REST list URL

--- a/html/index.html
+++ b/html/index.html
@@ -84,7 +84,7 @@
 
 <p>To get involved, simply contact me at <a href="mailto:chadananda@gmail.com">chadananda@gmail.com</a>. I'll set up user credentials for for the "accents" app, assign you a book and answer any questions.   </p>
 
-<p>Want to use the latest dictionary? This REST URL pulls down a JSON object containing the entire current wordlist, grouped by occurance with count.  <a href="http://diacritics.iriscouch.com/accents/_design/terms_list/_view/terms_list?group=true&amp;group_level=1">http://diacritics.iriscouch.com/accents/_design/terms_list/_view/terms_list?group=true&amp;group_level=1</a></p>
+<p>Want to use the latest dictionary? This REST URL pulls down a JSON object containing the entire current wordlist, grouped by occurance with count.  <a href="http://diacritics.iriscouch.com/accents/_design/terms_list/_view/terms_list">http://diacritics.iriscouch.com/accents/_design/terms_list/_view/terms_list</a></p>
 
 
 
