--- a/html/report-Advent.html
+++ b/html/report-Advent.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Diacritícál</h1>
+        <h1><a href="http://chadananda.github.io/diacritical">Diacritícál</a></h1>
         <h2>Bahá’í Term Suggestion Script</h2>
         <a href="https://github.com/chadananda/diacritical" class="button"><small>View project on</small>GitHub</a>
       </div>
