added title link & style

--- a/html/index.html
+++ b/html/index.html
@@ -63,8 +63,18 @@
 
 <p>This project attempts to address that fundamental problem by providing an automated replacement and suggestion system which can utilize a dictionary of authoritatively spelled terms.  </p>
 
+<p><b> Some Test Books downloaded from reference.bahai.org: </b></p>
 
-
+<ul>
+<li>http://chadananda.github.io/diacritical/html/report-Dawn-Breakers.html
+<li>http://chadananda.github.io/diacritical/html/report-GPB.html
+<li>http://chadananda.github.io/diacritical/html/report-Advent.html
+<li>http://chadananda.github.io/diacritical/html/report-Gleanings.html
+<li>http://chadananda.github.io/diacritical/html/report-Kitab-i-Iqan.html
+<li>http://chadananda.github.io/diacritical/html/report-PDC.html
+<li>http://chadananda.github.io/diacritical/html/report-WOB.html
+<li>http://chadananda.github.io/diacritical/html/report-Summons.html
+</ul>
 
 
 
