added title link & style

--- a/html/index.html
+++ b/html/index.html
@@ -66,14 +66,14 @@
 <p><b> Some Test Books downloaded from reference.bahai.org: </b></p>
 
 <ul>
-<li>http://chadananda.github.io/diacritical/html/report-Dawn-Breakers.html
-<li>http://chadananda.github.io/diacritical/html/report-GPB.html
-<li>http://chadananda.github.io/diacritical/html/report-Advent.html
-<li>http://chadananda.github.io/diacritical/html/report-Gleanings.html
-<li>http://chadananda.github.io/diacritical/html/report-Kitab-i-Iqan.html
-<li>http://chadananda.github.io/diacritical/html/report-PDC.html
-<li>http://chadananda.github.io/diacritical/html/report-WOB.html
-<li>http://chadananda.github.io/diacritical/html/report-Summons.html
+<li><a href="http://chadananda.github.io/diacritical/html/report-Dawn-Breakers.html">http://chadananda.github.io/diacritical/html/report-Dawn-Breakers.html</a>
+<li><a href="http://chadananda.github.io/diacritical/html/report-GPB.html">http://chadananda.github.io/diacritical/html/report-GPB.html</a>
+<li><a href="http://chadananda.github.io/diacritical/html/report-Advent.html">http://chadananda.github.io/diacritical/html/report-Advent.html</a>
+<li><a href="http://chadananda.github.io/diacritical/html/report-Gleanings.html">http://chadananda.github.io/diacritical/html/report-Gleanings.html</a>
+<li><a href="http://chadananda.github.io/diacritical/html/report-Kitab-i-Iqan.html">http://chadananda.github.io/diacritical/html/report-Kitab-i-Iqan.html</a>
+<li><a href="http://chadananda.github.io/diacritical/html/report-PDC.html">http://chadananda.github.io/diacritical/html/report-PDC.html</a>
+<li><a href="http://chadananda.github.io/diacritical/html/report-WOB.html">http://chadananda.github.io/diacritical/html/report-WOB.html</a>
+<li><a href="http://chadananda.github.io/diacritical/html/report-Summons.html">http://chadananda.github.io/diacritical/html/report-Summons.html</a>
 </ul>
 
 
